Te lo he mejorado Crack

--- a/Apoyo_cliente/textoAMayus.html
+++ b/Apoyo_cliente/textoAMayus.html
@@ -9,6 +9,7 @@
             var textoMayus = texto.toUpperCase();
             var textoMayus = document.getElementById("infoTexto").textContent = textoMayus;
         }
+        //Hey estoy editando esto buenos dias Jose
     </script>
 </head>
 
